# uxarray

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  build.sh  grid_geoflow.exo  grid_geoflow_out.exo  meta.yaml  myfile.ug  pyproject.toml  requirements.txt  ruff.toml  setup.py  test_scrip_outfile.nc  test_zonal.py  write_to_scrip.nc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  upstream-failure-issue-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  release_request.md
.github/workflows/: asv-benchmarking-comment.yml  asv-benchmarking-pr.yml  asv-benchmarking.yml  ci-time.yml  ci.yml  main.yml  pre-commit.yml  prepare-monthly-release.yml  pypi.yaml  upstream-dev-ci.yml  yac-optional.yml
benchmarks/: _memsize.py  asv.conf.json  bench_connectivity.py  construct_connectivity.py  face_bounds.py  geometry_kernels.py  geometry_samebody.py  geometry_samebody_gcagca.py  import.py  mpas_dyamond.py  mpas_ocean.py  mpas_scale.py  quad-hexagon.py  quad_hexagon.py  thread_scaling_constlat.py  zonal_mean.py
benchmarks/helpers/: _memsize.py
build_envs/: environment.yml  upstream-dev-environment.yml
ci/: asv.yml  docs.yml  environment.yml  install-upstream.sh  upstream-dev-environment.yml
ci/release/: prepare_monthly_release.py
docs/: announcement.rst  api.rst  calendar.rst  citation.rst  conda_environment.yml  conf.py  contributing.rst  custom.css  examples.rst  external-examples-gallery.txt  gallery.rst  gallery.yml  index.rst  installation.rst  notebook-examples 2.txt  quickstart.rst  support.rst  tutorials.rst  userguide.rst  visualization-examples-gallery.txt  workflow-examples-gallery.txt
docs/_static/: style.css  theme_overrides.css
docs/examples/: 000-template.ipynb  001-read-grid-data.ipynb  001-reading-data.ipynb  001-working-with-unstructured-grids.ipynb  002-access-grid-info.ipynb  002-grid-topo.ipynb  002-grid-topology.ipynb  003-area-calc-integrate.ipynb  003-area-calc.ipynb  003-working-with-mpas-grids.ipynb  004-multiprecision-usage.ipynb  004-working-with-mpas-grids.ipynb  005-building-edges-from-nodes.ipynb  005-faces-to-polygons.ipynb  005-to-geodataframe-for-holoviz.ipynb  005-viz-example.ipynb  005-viz-with-holoviz.ipynb  006-conversion-to-pc-lc-for-mpl.ipynb  006-nearest-neighbor-remap.ipynb  006-plot-api-topology.ipynb  006-plotting-api.ipynb  007-polygon-viz.ipynb  008-point-viz.ipynb  009-subsetting.ipynb  009-trimesh-viz.ipynb  010-e3sm-load-viz.ipynb  010-structured-unstructured.ipynb  011-e3sm-calc-viz.ipynb  Reading Data.ipynb  balltree-kdtree-performance.ipynb  blank.ipynb  data-access.ipynb  e3sm-calc-workflow.ipynb  e3sm-load-viz.ipynb  parallel-load-ux-with-dask.ipynb  reading-data.ipynb  template.ipynb  test_notebook.ipynb  testing_book.ipynb  testing_notebook.ipynb  (+1 more)
docs/getting-started/: freq-asked-questions.rst  installation.rst  overview.rst  quick-install.rst  quick-overview.ipynb  unstructured-grids.rst
docs/internal_api/: index.rst
docs/user-guide/: Untitled.ipynb  _grid-formats.rst  accurate-helpers.ipynb  advanced-plotting.ipynb  area_calc.ipynb  area_calc2.ipynb  azimuthal-average.ipynb  calculus.ipynb  connectivity.rst  coordinates.rst  cross-sections.ipynb  curl.ipynb  custom-grid.ipynb  data-structures.ipynb  data-structures.rst  dimensions-and-mapping.rst  distance.ipynb  divergence.ipynb  dual-mesh.ipynb  exodus.rst  face-area.ipynb  from-points.ipynb  from_file.ipynb  gradients.ipynb  gradients.py.ipynb  grid-formats.rst  grid-quantities.rst  grid.nc  healpix.ipynb  holoviews.ipynb  holoviz.ipynb  integration.ipynb  mpas.rst  mpl.ipynb  parallel-load-ux-with-dask.ipynb  plotting.ipynb  point_in_face.ipynb  remap-weights.rst  remapping-u2s.ipynb  remapping-u2u.ipynb  (+21 more)
docs/user_api/: index.rst  uxarray_api.md
meshfiles/: catalog.md  geoflow.data.nc  oQU120.data.nc  outCSne30.data.nc  outCSne30.grid.ug
test/: IO_TEST_STRUCTURE.md  __init__.py  base_io_tests.py  conftest.py  constants.py  grid_fire.shp  grid_geoflow.exo  hex_2x2x2_ss.exo  latlonbound_test_utilities.py  paths.py  precomputed_weights_test.py  reductions.py  sphere_mixed.1.lb8.ugrid  test_accessors.py  test_accurate_computing.py  test_api.py  test_arcs.py  test_centroids.py  test_computing.py  test_connectivity.py  test_coords.py  test_cross_sections.py  test_dask.py  test_dataarray.py  test_dataset.py  test_dependencies.py  test_duplicate_nodes.py  test_edge.py  test_esmf.py  test_exodus.py  test_face_areas.py  test_fesom.py  test_from_points.py  test_from_topology.py  test_geometry.py  test_geopandas.py  test_geos.py  test_gradient.py  test_grid.py  test_healpix.py  (+35 more)
test/core/: test_accessors.py  test_api.py  test_azimuthal.py  test_curl.py  test_curl_comprehensive.py  test_dask.py  test_dataarray.py  test_dataset.py  test_divergence.py  test_gradient.py  test_inheritance.py  test_integration.py  test_repr.py  test_topological_agg.py  test_tutorial.py  test_type_hints.py  test_vector_calculus.py  test_weighted_mean.py
test/cross_sections/: test_cross_sections.py
test/grid/: __init__.py  test_antimeridian.py  test_arcs.py  test_area.py  test_basic_integration.py  test_bounds.py  test_bounds_advanced.py  test_centroids.py  test_connectivity.py  test_coordinates.py  test_dual_mesh.py  test_geodataframe.py  test_geometry.py  test_geometry_advanced.py  test_grid.py  test_grid_areas.py  test_grid_coordinates_consolidated.py  test_grid_core.py  test_grid_geometry.py  test_grid_initialization.py  (+16 more)
uxarray/: __init__.py  _edge.py  _exodus.py  _latlonbound_utilities.py  _mpas.py  _populate_exodus.py  _populate_exodus2.py  _populate_scrip.py  _populate_shpfile.py  _populate_ugrid.py  _scrip.py  _shapefile.py  _shpfile.py  _ugrid.py  _zonal_avg_utilities.py  cmaps.py  connectivity.py  constants.py  coordinates.py  dataset.py  edge.py  formatting_html.py  get_quadratureDG.py  grid.py  helpers.py  integrate.py  multi_precision_helpers.py  notes_for_ds_grid_seperation  utilities.py
(+747 files in other folders)
