[project]
classifiers=[
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dynamic = ["version"]
keywords = ["unstructured grids", "xarray", "ugrid", "mpas", "exodus", "scrip", "fesom", "icon", "esmf"]
description = "Xarray extension for unstructured climate and global weather data analysis and visualization."
license = {file = "LICENSE"}
name = "uxarray"
readme = "README.md"
requires-python = ">=3.10"

# minimal dependencies start
dependencies = [
  "antimeridian",
  "dask[dataframe]",
  "netcdf4",
  "numba>=0.63",  # 0.63 is the first release supporting Python 3.14 (3.10 <= py < 3.15). See #1561.
  "numpy",
  "pandas",
  "scikit-learn",
  "scipy",
  "shapely",
  "xarray",
  "polars",
]
# minimal dependencies end

[project.optional-dependencies]
all = ["uxarray[dev,geo,viz]"]
complete = ["uxarray[dev,geo,viz]"]  # alias to "all"
dev = [
    'asv',
    'pooch',
    'pre_commit',
    'pytest',
    'pytest-cov',
    'ruff',
]
geo = [
    "geopandas",
    "healpix",
    "pyproj",
    "spatialpandas",
]
viz = [
    "cartopy",
    "matplotlib<3.11",  # matplotlib 3.11.0 breaks some plots but <3.11 is fine; see issue #1542.
    "geoviews",
    "holoviews",
    "hvplot",
]

[project.urls]
Documentation = "https://uxarray.readthedocs.io/"
Source = "https://github.com/UXARRAY/uxarray"
Tracker = "https://github.com/UXARRAY/uxarray/issues"


[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=60",
  "setuptools-scm>=8",
]

[tool.setuptools]
packages = ["uxarray"]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.ruff]
extend-exclude = ["test","benchmarks"]

[tool.ruff.lint]
extend-select = ["I"]
extend-ignore = ["E731"]

[tool.ruff.lint.isort]
known-first-party = ["uxarray"]

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["E402", "F401"]
"uxarray/plot/*" = ["E402", "F401"]

[tool.ruff.format]
docstring-code-format = true
